@@ -2681,6 +2681,11 @@ sub save_dialog {
     combobox_set_active( $combobi, $SETTING{'image type'}, @type );
     $hboxi->pack_end( $combobi, FALSE, FALSE, 0 );
 
+    my $kbutton = Gtk2::CheckButton->new( $d->get('Close dialog on save') );
+    $tooltips->set_tip( $kbutton, $d->get('Close dialog on save') );
+    $kbutton->set_active( $SETTING{close_dialog_on_save} );
+    $vbox->pack_start( $kbutton, FALSE, TRUE, 0 );
+
     # HBox for buttons
     my $hboxb = Gtk2::HBox->new;
     $vbox->pack_start( $hboxb, FALSE, TRUE, 0 );
@@ -2699,7 +2704,7 @@ sub save_dialog {
             $spinbuttonpq, \@fonts,           $combof,
             $entryd,       $entrya,           $entryt,
             $entrys,       $entryk,           \@tiff_compression,
-            $combobtc,     $spinbuttontq
+            $combobtc,     $spinbuttontq,     $kbutton
         ]
     );
 
@@ -2832,7 +2837,7 @@ sub save_button_clicked_callback {
         $pdf_compression, $combob,  $spinbuttonpq,     $fonts,
         $combof,          $entryd,  $entrya,           $entryt,
         $entrys,          $entryk,  $tiff_compression, $combobtc,
-        $spinbuttontq
+        $spinbuttontq,    $kbutton
     ) = @{$data};
 
     # Compile list of pages
@@ -2840,6 +2845,7 @@ sub save_button_clicked_callback {
 
     # dig out the image type, compression and quality
     $SETTING{'image type'} = $type->[ $combobi->get_active ][0];
+    $SETTING{close_dialog_on_save} = $kbutton->get_active;
 
     given ( $SETTING{'image type'} ) {
         when (/pdf/xsm) {
@@ -3121,7 +3127,9 @@ sub file_chooser_response_callback {
                 $slist->save_session($filename);
             }
         }
-        if ( defined $windowi ) { $windowi->hide }
+        if ( defined $windowi and $SETTING{close_dialog_on_save} ) {
+            $windowi->hide;
+        }
     }
     $dialog->destroy;
     return;
