@@ -6,6 +6,8 @@
   Closes Debian bug #823626 (Date in file name off by one day when saving)
 * Show warning when importing a PDF if number of images is not equal to number
   of pages.
+* + option not to close save dialog.
+  Closes feature request #91 (Keep save dialoque open)
 
 
 1.4.0 (14.04.2016):
